feat: Enhance status command with project and transport info
Implements story 5.1.

The 'status' MCP command has been updated to provide more comprehensive information:

- Adds `wigai_version`, `project_name`, and `audio_engine_active` to the root of the response.
- Adds a nested `transport` object containing:
    - `playing` (boolean)
    - `recording` (boolean)
    - `repeat_active` (boolean)
    - `metronome_active` (boolean)
    - `current_tempo` (float)
    - `time_signature` (string)
    - `current_beat_str` (string)
    - `current_time_str` (string)

Modifications were made to `StatusTool.java` to fetch this information from the Bitwig API.
The `docs/api-reference.md` has been updated to reflect these changes in the command's response.
Unit tests have been added in `StatusToolTest.java` to cover the new functionality.
The story file `docs/stories/5.1.story.md` has been updated to 'Review' status and tasks marked complete.
A DoD checklist `docs/checklists/story-dod-checklist-5.1.txt` has been created.